--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
                     ".scm",
                     ".ss",
                     ".sch",
-                    ".rkt"
+                    ".rkt",
+                    ".hy"
                 ],
                 "configuration": "./scheme.configuration.json"
             }
