--- a/package.json
+++ b/package.json
@@ -1,76 +1,81 @@
 {
-    "name": "vscode-hy",
-    "displayName": "vscode-hy",
-    "description": "Hy language support for VSCode",
-    "keywords": [
-        "hy",
-        "syntax"
-    ],
-    "version": "0.0.1",
-    "publisher": "xuqinghan",
-    "icon": "images/lambda.png",
-    "main": "./out/src/hyMain",
-    "license": "MIT",
-    "author": {
-        "name": "Qinghan Xu"
-    },
-    "engines": {
-        "vscode": "^1.11.0"
-    },
-    "categories": [
-        "Languages",
-        "Snippets"
-    ],
-    "activationEvents": [
-        "onLanguage:hy"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/xuqinghan/vscode-hy.git"
-    },
-    "bugs": {
-        "url": "https://github.com/xuqinghan/vscode-hy/issues"
-    },
-    "homepage": "https://github.com/xuqinghan/vscode-hy",
-    "contributes": {
-        "languages": [
-            {
-                "id": "hy",
-                "aliases": [
-                    "Hy",
-                    "hy"
-                ],
-                "extensions": [
-                    ".hy"
-                ],
-                "configuration": "./hy.configuration.json"
-            }
-        ],
-        "grammars": [
-            {
-                "language": "hy",
-                "scopeName": "source.hy",
-                "path": "./syntaxes/hy.tmLanguage"
-            }
-        ],
-        "snippets": [
-            {
-                "language": "hy",
-                "path": "./snippets/hy.json"
-            }
-        ]
-    },
-    "scripts": {
-        "vscode:prepublish": "tsc -p ./",
-        "compile": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "node ./node_modules/vscode/bin/test"
-    },
-    "devDependencies": {
-        "typescript": "^2.0.3",
-        "vscode": "^1.0.0",
-        "mocha": "^2.3.3",
-        "@types/node": "^6.0.40",
-        "@types/mocha": "^2.2.32"
-    }
+	"name": "vscode-hy",
+	"displayName": "vscode-hy",
+	"description": "Hy language support for VSCode",
+	"keywords": [
+		"hy",
+		"syntax"
+	],
+	"version": "0.0.1",
+	"publisher": "xuqinghan",
+	"icon": "images/hy-logo-small.png",
+	"main": "./out/src/hyMain",
+	"license": "MIT",
+	"author": {
+		"name": "Qinghan Xu"
+	},
+	"engines": {
+		"vscode": "^1.11.0"
+	},
+	"categories": [
+		"Languages",
+		"Snippets"
+	],
+	"activationEvents": [
+		"onLanguage:hy"
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/xuqinghan/vscode-hy.git"
+	},
+	"bugs": {
+		"url": "https://github.com/xuqinghan/vscode-hy/issues"
+	},
+	"homepage": "https://github.com/xuqinghan/vscode-hy",
+	"contributes": {
+		"languages": [
+			{
+				"id": "hy",
+				"aliases": [
+					"Hy",
+					"hy"
+				],
+				"extensions": [
+					".hy"
+				],
+				"configuration": "./hy.configuration.json"
+			}
+		],
+		"grammars": [
+			{
+				"language": "hy",
+				"scopeName": "source.hy",
+				"path": "./syntaxes/hy.tmLanguage"
+			}
+		],
+		"snippets": [
+			{
+				"language": "hy",
+				"path": "./snippets/hy.json"
+			}
+		]
+	},
+	"scripts": {
+		"vscode:prepublish": "tsc -p ./",
+		"compile": "tsc -watch -p ./",
+		"postinstall": "node ./node_modules/vscode/bin/install",
+		"test": "node ./node_modules/vscode/bin/test"
+	},
+	"devDependencies": {
+		"typescript": "^2.0.3",
+		"vscode": "^1.0.0",
+		"mocha": "^2.3.3",
+		"@types/node": "^6.0.40",
+		"@types/mocha": "^2.2.32"
+	},
+	"__metadata": {
+		"id": "ed3bed5c-7cc7-40fd-9452-e53599e890a3",
+		"publisherDisplayName": "xuqinghan",
+		"publisherId": "b8f9b3d2-b308-4194-a789-ed1843c40998"
+	}
 }
