--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
 		"vscode": "^1.11.0"
 	},
 	"categories": [
-		"Languages",
+		"Programming Languages",
 		"Snippets"
 	],
 	"activationEvents": [
-		"onLanguage:hy"
+		"onLanguage:hy",
+		"onCommand:hy.startREPL",
+		"onCommand:hy.eval",
+		"onCommand:hy.evalFile",
+		"onCommand:hy.formatFile"
 	],
 	"repository": {
 		"type": "git",
@@ -53,6 +57,30 @@
 				"path": "./syntaxes/hy.tmLanguage"
 			}
 		],
+		"commands": [
+			{
+				"command": "hy.startREPL",
+				"title": "Hy: Start REPL"
+			},
+			{
+				"command": "hy.eval",
+				"title": "Hy: Evaluate expression"
+			},
+			{
+				"command": "hy.evalFile",
+				"title": "Hy: Evaluate file"
+			}
+		],
+		"keybindings": [
+			{
+				"command": "hy.eval",
+				"key": "alt+enter"
+			},
+			{
+				"command": "hy.evalFile",
+				"key": "ctrl+alt+enter"
+			}
+		],
 		"snippets": [
 			{
 				"language": "hy",
@@ -67,10 +95,11 @@
 		"test": "node ./node_modules/vscode/bin/test"
 	},
 	"devDependencies": {
-		"typescript": "^2.0.3",
+		"typescript": "^4.0.0",
 		"vscode": "^1.0.0",
 		"mocha": "^2.3.3",
-		"@types/node": "^6.0.40",
+		"@types/node": "^12.12.0",
+		"@types/vscode": "^1.34.0",
 		"@types/mocha": "^2.2.32"
 	},
 	"__metadata": {
