--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es6",
+        "target": "es2019",
         "outDir": "out",
         "lib": [
-            "es6"
+            "es2019"
         ],
         "sourceMap": true,
-        "rootDir": "."
+        "rootDir": ".",
+        "skipLibCheck": true
     },
     "exclude": [
         "node_modules",
