--- a/package.json
+++ b/package.json
@@ -935,7 +935,7 @@
 	},
 	"dependencies": {
 		"@types/universal-analytics": "^0.4.2",
-        "acorn": "^6.4.1",
+		"acorn": "^6.4.1",
 		"immutable": "3.8.1",
 		"immutable-cursor": "2.0.1",
 		"lodash": "^4.17.19",
@@ -945,6 +945,7 @@
 		"uuidv4": "6.2.12"
 	},
 	"devDependencies": {
+		"@types/mocha": "^10.0.1",
 		"@types/node": "^12.12.0",
 		"@types/vscode": "^1.34.0",
 		"mocha": "^10.1.0",
