--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,12 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es2019",
-        "outDir": "out",
-        "lib": [
-            "es2019"
-        ],
-        "sourceMap": true,
-        "rootDir": "src",
-        "skipLibCheck": true
-    },
-    "exclude": [
-        "node_modules",
-        ".vscode-test"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es2019",
+    "outDir": "out",
+    "lib": ["es2019"],
+    "sourceMap": true,
+    "rootDir": "src",
+    "skipLibCheck": true
+  },
+  "exclude": ["node_modules", ".vscode-test", "test"]
 }
