--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
 		"hy",
 		"syntax"
 	],
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"publisher": "hylang",
 	"icon": "images/hy-logo-small.png",
-	"main": "./out/hyMain",
+	"main": "./dist/extension.js",
 	"license": "MIT",
 	"author": {
 		"name": "Caleb Figgers"
@@ -929,13 +929,21 @@
 		]
 	},
 	"scripts": {
-		"vscode:prepublish": "tsc -p ./",
-		"compile": "tsc -watch -p ./",
-		"test": "node ./node_modules/vscode/bin/test"
+		"compile": "npm run compile-cljs && npm run compile-ts",
+		"lint": "eslint . --ext .ts,.tsx",
+		"watch": "webpack --mode none --watch",
+		"compile-cljs": "npx shadow-cljs compile :calva-lib",
+		"compile-ts": "npx tsc --project ./tsconfig.json",
+		"clean": "rimraf ./out && rimraf ./tsconfig.tsbuildinfo && rimraf ./cljs-out",
+		"precompile": "npm i && npm run clean",
+		"release-cljs": "npx shadow-cljs release :calva-lib",
+		"prerelease": "npm run precompile && npm run release-cljs",
+		"release": "webpack --mode production",
+		"vscode:prepublish": "npm run release"
 	},
 	"dependencies": {
 		"@types/universal-analytics": "^0.4.2",
-        "acorn": "^6.4.1",
+		"acorn": "^6.4.1",
 		"immutable": "3.8.1",
 		"immutable-cursor": "2.0.1",
 		"lodash": "^4.17.19",
@@ -948,6 +956,10 @@
 		"@types/node": "^12.12.0",
 		"@types/vscode": "^1.34.0",
 		"mocha": "^10.1.0",
-		"typescript": "^4.7.4"
+		"rimraf": "^5.0.1",
+		"ts-loader": "^9.4.4",
+		"typescript": "^4.7.4",
+		"webpack": "^5.88.2",
+		"webpack-cli": "^5.1.4"
 	}
 }
