--- a/package.json
+++ b/package.json
@@ -965,5 +965,8 @@
 		"typescript": "^4.7.4",
 		"webpack": "^5.88.2",
 		"webpack-cli": "^5.1.4"
-	}
+	},
+	"extensionDependencies": [
+		"ms-python.python"
+	]
 }
