--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"hy",
 		"syntax"
 	],
-	"version": "0.0.8",
+	"version": "0.0.9",
 	"publisher": "hylang",
 	"icon": "images/hy-logo-small.png",
 	"main": "./dist/extension.js",
@@ -158,6 +158,11 @@
 			{
 				"command": "hy.eval",
 				"title": "Hy: Evaluate expression",
+				"enablement": "editorLangId == hy"
+			},
+			{
+				"command": "hy.evalTopLevel",
+				"title": "Hy: Evaluate top level expression",
 				"enablement": "editorLangId == hy"
 			},
 			{
@@ -569,6 +574,11 @@
 				"key": "alt+enter"
 			},
 			{
+				"command": "hy.evalTopLevel",
+				"key": "alt+shift+e",
+				"when": "editorLangId == hy && hy:keybindingsEnabled"
+			},
+			{
 				"command": "hy.evalFile",
 				"key": "ctrl+alt+enter"
 			},
@@ -954,13 +964,16 @@
 		"lodash.isequal": "4.5.0",
 		"parinfer": "^3.12.0",
 		"universal-analytics": "^0.5.3",
-		"uuidv4": "6.2.12"
+		"uuidv4": "6.2.12",
+		"ws": "^8.17.0"
 	},
 	"devDependencies": {
 		"@types/node": "^12.12.0",
 		"@types/vscode": "^1.34.0",
 		"mocha": "^10.1.0",
 		"rimraf": "^5.0.1",
+		"shadow-cljs": "^2.25.8",
+		"source-map-support": "^0.5.21",
 		"ts-loader": "^9.4.4",
 		"typescript": "^4.7.4",
 		"webpack": "^5.88.2",
